<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kmkz.xuuDiamondsRBXSkins.activities.WithdrawalActivity"
    android:background="@color/grey_5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curve_toolbar_bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/close_img"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:srcCompat="@drawable/ic_close"
                        android:padding="15dp"
                        app:tint="@color/white"
                        android:layout_gravity="end"
                        android:transitionName="imageTransition"
                        android:contentDescription="@string/close" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="25dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font2"
                        android:text="@string/my_balance"
                        android:textColor="@color/white"
                        android:textSize="19sp" />

                    <TextView
                        android:id="@+id/Points_Txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textColor="@android:color/white"
                        android:textSize="50sp"
                        app:fontFamily="@font/font1" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_mxlarge" />

                </LinearLayout>

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nested_scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    android:scrollingCache="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/spacing_medium" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/convert_points"
                            android:textSize="19sp"
                            android:padding="10dp"
                            android:gravity="center"
                            android:fontFamily="@font/font2"/>

                        <EditText
                            android:id="@+id/pointsConvert_editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:maxLength="7"
                            android:textSize="65sp"
                            android:layout_gravity="center"
                            android:fontFamily="@font/font1"
                            android:inputType="number"
                            android:autofillHints="0"
                            android:lines="1"
                            tools:ignore="LabelFor" />

                        <TextView
                            android:id="@+id/convertUSD_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/converter"
                            android:textSize="20sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_gravity="center"/>

                        <Button
                            android:id="@+id/Withdrawal_Btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Withdrawal"
                            android:layout_gravity="center"
                            android:background="@drawable/border"
                            android:padding="25dp"
                            android:textColor="@color/white"
                            android:layout_marginTop="40dp"/>

                        <TextView
                            android:id="@+id/minWithdrawalTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/minimum_points"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/font1"/>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>